k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jobkai
  labels:
    name: jobkai
    environment: production
